Correcting button to cs1

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<script src="jquery-3.2.1.min.js"></script>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -14,7 +15,7 @@
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 
-<form method="get" action="/viz/visual_cs1/index.html">
+<form method="get" action="/visual_cs1/index.html">
     <button class="btn" type="submit">Case Study 1</button>
 </form>
 
