--- a/group/prect/index.html
+++ b/group/prect/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <h1>Converted Users (Trial period)</h1>
     <title>Sequences sunburst</title>
     <script src="//d3js.org/d3.v3.min.js"></script>
     <link rel="stylesheet" type="text/css"
