--- a/group/nct/index.html
+++ b/group/nct/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Sequences sunburst</title>
+    <h1>Non Converted Trial Users </h1>
     <script src="//d3js.org/d3.v3.min.js"></script>
     <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
