--- a/group/nct/index.html
+++ b/group/nct/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Sequences sunburst</title>
     <h1>Non Converted Trial Users </h1>
+    <h2>No. of sessions: 23,871</h2>
     <script src="//d3js.org/d3.v3.min.js"></script>
     <link rel="stylesheet" type="text/css"
       href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
