--- a/group/prect/index.html
+++ b/group/prect/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <h1>Converted Users (Trial period)</h1>
+    <h2>No. of sessions: 6,670</h2>
     <title>Sequences sunburst</title>
     <script src="//d3js.org/d3.v3.min.js"></script>
     <link rel="stylesheet" type="text/css"
